Automate React asset handling

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <title>Factoid Builder</title>
 </head>
 <body>
-    <div id="root"></div>
+    <div id="factoid-builder-root"></div>
     <script type="module" src="/src/main.jsx"></script>
 </body>
 </html>
